fix(Size):se repararon problemas de tamaño

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
       </header>
       <aside class="sidebar between">
-        <div class="logo center">
+        <div class="logo">
           <div class="container_logo center">
             <span class="material-symbols-outlined"> electric_car </span>
             <p>Electric Cars</p>
@@ -68,6 +68,84 @@
       </aside>
       <main class="main">
         <div class="container">
+          <div class="card between">
+            <div class="header-c">
+              <img src="assets/img/auto.jpg" alt="Producto" />
+            </div>
+            <div class="body-c">
+              <h4>Producto</h4>
+              <p>Model: City Car</p>
+              <p class="price">$ 2.000</p>
+            </div>
+            <div class="footer-c">
+              <input type="button" value="Ver más" />
+            </div>
+          </div>
+          <div class="card between">
+            <div class="header-c">
+              <img src="assets/img/auto.jpg" alt="Producto" />
+            </div>
+            <div class="body-c">
+              <h4>Producto</h4>
+              <p>Model: City Car</p>
+              <p class="price">$ 2.000</p>
+            </div>
+            <div class="footer-c">
+              <input type="button" value="Ver más" />
+            </div>
+          </div>
+          <div class="card between">
+            <div class="header-c">
+              <img src="assets/img/auto.jpg" alt="Producto" />
+            </div>
+            <div class="body-c">
+              <h4>Producto</h4>
+              <p>Model: City Car</p>
+              <p class="price">$ 2.000</p>
+            </div>
+            <div class="footer-c">
+              <input type="button" value="Ver más" />
+            </div>
+          </div>
+          <div class="card between">
+            <div class="header-c">
+              <img src="assets/img/auto.jpg" alt="Producto" />
+            </div>
+            <div class="body-c">
+              <h4>Producto</h4>
+              <p>Model: City Car</p>
+              <p class="price">$ 2.000</p>
+            </div>
+            <div class="footer-c">
+              <input type="button" value="Ver más" />
+            </div>
+          </div>
+          <div class="card between">
+            <div class="header-c">
+              <img src="assets/img/auto.jpg" alt="Producto" />
+            </div>
+            <div class="body-c">
+              <h4>Producto</h4>
+              <p>Model: City Car</p>
+              <p class="price">$ 2.000</p>
+            </div>
+            <div class="footer-c">
+              <input type="button" value="Ver más" />
+            </div>
+          </div>
+          <div class="card between">
+            <div class="header-c">
+              <img src="assets/img/auto.jpg" alt="Producto" />
+            </div>
+            <div class="body-c">
+              <h4>Producto</h4>
+              <p>Model: City Car</p>
+              <p class="price">$ 2.000</p>
+            </div>
+            <div class="footer-c">
+              <input type="button" value="Ver más" />
+            </div>
+          </div>
           <div class="card between">
             <div class="header-c">
               <img src="assets/img/auto.jpg" alt="Producto" />
